template.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Loaded Balanced Web servers"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.10.10.0/16 
  
  InternetGateway:
    Type: AWS::EC2::InternetGateway

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  DefaultPublicRoute: 
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway


  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.10.10.0/24
      MapPublicIpOnLaunch: true
  
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: 10.10.20.0/24
      MapPublicIpOnLaunch: true

  WebInstance1: 
    Type: "AWS::EC2::Instance"
    Properties: 
      ImageId: "ami-d38a4ab1"
      KeyName: "automation"
      InstanceType: t2.nano
      SecurityGroupIds:
        - !Ref WebSecurityGroup
      SubnetId: !Ref PublicSubnet1
      BlockDeviceMappings:
        - 
          DeviceName: "/dev/sda1"
          Ebs:
            VolumeSize: 8
      UserData: 
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          sudo su
          curl -O https://apt.puppetlabs.com/puppet-release-xenial.deb
          dpkg -i puppet-release-xenial.deb
          apt-get update -y
          apt-get install -y puppet git
          git clone https://github.com/wrighbr/cloudformation.git /tmp/cloudformation
          sudo puppet apply /tmp/cloudformation/puppet/nginx.pp
          #Ref: WebInstance1 > /home/ubunutu/ec2instance
          
      Tags: 
        - 
          Key: Name
          Value: web1
        - 
          Key: CloudFormation
          Value: True
  
  WebSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupName: any_ssh_http_https
      GroupDescription: Allow ssh http and https from anywhere
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
        
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
        
      - IpProtocol: tcp
        FromPort: 433
        ToPort: 443
        CidrIp: 0.0.0.0/0
        
      SecurityGroupEgress:
      - IpProtocol: "-1"
        CidrIp: 0.0.0.0/0


  ElasticLoadBalancer:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      Subnets:
      - !Ref PublicSubnet1
      - !Ref PublicSubnet2
      Instances:
      - !Ref WebInstance1
      Listeners:
      - LoadBalancerPort: 80
        InstancePort: 80
        Protocol: HTTP

      - LoadBalancerPort: 443
        InstancePort: 443
        Protocol: HTTPS
        SSLCertificateId: arn:aws:acm:ap-southeast-2:123053101016:certificate/c2906e1f-4d4d-4c4a-9681-26e674a79ac7
      
      #HealthCheck:
      #  Target: HTTP:80/
      #  HealthyThreshold: '3'
      #  UnhealthyThreshold: '5'
      #  Interval: '30'
      #  Timeout: '5'
